# qerp

./: AGENTS.md  QAMP Project Proposal.docx  README.md  pyproject.toml  requirements.txt
notebooks/: A_toy_fragment_SKQD.ipynb  B_benzothiophene_pipeline.ipynb
reports/: tech_note_template.tex
src/dmet/: __init__.py  dmet_pyscf.py
src/ham/: mapping.py
src/mitigation/: mitigation.py
src/neb/: ase_neb.py
src/post/: analysis.py
src/solvers/: adapt_vqe.py  skqd.py
src/utils/: io.py
