[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qerp"
version = "0.0.1"
description = "Quantum-Enhanced Reaction Pathway Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "B. Dobbelaar"}]
dependencies = []
